Fix incorrect color in fragment color

--- a/analog-watchface/src/main/res/values/strings.xml
+++ b/analog-watchface/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">AnalogWatchfaceOpengl</string>
     <string name="message">Watch face tapped</string>
-    <string name="my_analog_name">My Analog OpenGL</string>
+    <string name="my_analog_name">My OpenGL</string>
 </resources>
